# portatil

./: .gitmodules  LICENSE.md  README.md
3D Parts/: Portatil.blend
3D Parts/Renders/: Animated.mkv
3D Parts/STL/: Back Plate.stl  Button.stl  DPad.stl  Front Plate.stl  Power Slider.stl  Shell - Back.stl  Shell - Front.stl
Hardware/: .gitignore  Portatil.kicad_pcb  Portatil.kicad_prl  Portatil.kicad_pro  Portatil.kicad_sch  Portatil.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
Hardware/Portatil.pretty/: ILI9341 Module.kicad_mod  PAM8403 Module.kicad_mod  RP2040 Zero.kicad_mod  TP4056 Module.kicad_mod  Thumbwheel Potentiometer.kicad_mod
Software/: .gitignore
Software/Apps/DemoGame/: Assets.c  Assets.h  DemoGame.c  Makefile
Software/Assets/Pxo/: Battery.pxo  FolderIcon.pxo  ProgramIcon.pxo  ScrollDown.pxo  ScrollUp.pxo
Software/Assets/Xcf/: DefaultFont.xcf
Software/Runtime/: Assets.c  Assets.h  Drivers.h  Engine.c  Engine.h  Fixed.h  Kernel.c  Kernel.h  Main.c  States.h  VM.c  VM.h
Software/Runtime/Drivers/CPU/: CPU.Linux.c  CPU.Pico.c
Software/Runtime/States/: Error.c  InGame.c  PauseMenu.c  Shell.c
Software/SDK/: Fixed.h  Portatil.c  Portatil.h  Portatil.ld  SysCalls.s
Software/Targets/Linux64/: Makefile
Software/Targets/RP2040/: CMakeLists.txt
Software/Tools/: Debug.c  FileIO.c  Linker.h  Makefile  Packer.h  Tools.c  Tools.h
Software/Tools/Linker/: Linker.c  Programs.ELF.c  Programs.c
Software/Tools/Packer/: Assets.c  Images.PNG.c  Images.c  Packer.c
Software/Utils/: BuildPixeloramaPalette.py  Portatil.Pixelorama.json  SerialMonitor.sh
(+23 files in other folders)
